bootstrap expect wants a number

--- a/ansible/roles/consul-server/templates/consul.json.j2
+++ b/ansible/roles/consul-server/templates/consul.json.j2
@@ -1,6 +1,6 @@
 {
   "data_dir": "/opt/consul/data",
-  "bootstrap_expect": "3",
+  "bootstrap_expect": 3,
   "server": true,
   "bind_addr": "{{ ansible_default_ipv4.address }}",
   "recursors": [
