--- a/ansible/roles/consul-agent/templates/consul.json.j2
+++ b/ansible/roles/consul-agent/templates/consul.json.j2
@@ -1,6 +1,11 @@
 {
   "data_dir": "/opt/consul/data",
   "bind_addr": "{{ ansible_default_ipv4.address }}",
+  "retry_join": [
+    {% for ip in nomad_master_server_ips %}
+    "{{ ip }}"{% if not loop.last %},{% end if %}
+    {% endfor %}
+  ],
   "recursors": [
     "8.8.8.8",
     "8.8.4.4"
