--- a/ansible/roles/nomad-master/templates/nomad.hcl.j2
+++ b/ansible/roles/nomad-master/templates/nomad.hcl.j2
@@ -4,6 +4,11 @@ data_dir = "/opt/nomad/data"
 server {
   enabled = true
   bootstrap_expect = 3
+  retry_join = [
+    {% for ip in nomad_master_server_ips %}
+    "{{ ip }}"{% if not loop.last %},{% end if %}
+    {% endfor %}
+  ]
 }
 
 atlas {
