use bootstrap server for masters

--- a/ansible/roles/nomad-master/templates/nomad.hcl.j2
+++ b/ansible/roles/nomad-master/templates/nomad.hcl.j2
@@ -5,9 +5,7 @@ server {
   enabled = true
   bootstrap_expect = 3
   retry_join = [
-    {% for ip in nomad_master_server_ips %}
-    "{{ ip }}"{% if not loop.last %},{% end if %}
-    {% endfor %}
+    "{{ nomad_master_bootstrap_server_ip }}"
   ]
 }
 
