--- a/ansible/roles/consul-server/templates/consul.json.j2
+++ b/ansible/roles/consul-server/templates/consul.json.j2
@@ -4,9 +4,7 @@
   "server": true,
   "bind_addr": "{{ ansible_default_ipv4.address }}",
   "retry_join": [
-    {% for ip in nomad_master_server_ips %}
-    "{{ ip }}"{% if not loop.last %},{% end if %}
-    {% endfor %}
+    "{{ nomad_master_bootstrap_server_ip }}"
   ],
   "recursors": [
     "8.8.8.8",
