split on commas

--- a/ansible/roles/nomad-slave/templates/nomad.hcl.j2
+++ b/ansible/roles/nomad-slave/templates/nomad.hcl.j2
@@ -4,7 +4,7 @@ data_dir = "/opt/nomad/data"
 client {
   enabled = true
   servers = [
-    {% for ip in nomad_master_server_ips %}
+    {% for ip in nomad_master_server_ips|split(",") %}
     "{{ ip }}"{% if not loop.last %},{% endif %}
     {% endfor %}
   ]
