--- a/ansible/roles/consul-agent/templates/consul.json.j2
+++ b/ansible/roles/consul-agent/templates/consul.json.j2
@@ -2,7 +2,7 @@
   "data_dir": "/opt/consul/data",
   "bind_addr": "{{ ansible_default_ipv4.address }}",
   "retry_join": [
-    {% for ip in nomad_master_server_ips %}
+    {% for ip in nomad_master_server_ips|split(",") %}
     "{{ ip }}"{% if not loop.last %},{% endif %}
     {% endfor %}
   ],
